# newtest-1

./: Dockerfile  README.md  catalog-info.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/newtest_1/: __init__.py  __main__.py  main.py
tests/: test_package.py
